# Real_Time_Edge_Detection_Viewer

./: README .md  README.md
.github/: CI_CD Workflows.txt
.gitignore/: Support.txt
android/: CMakeLists.txt  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/edgedetector/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: edge_detection.cpp  edge_detection.h  native-lib.cpp
android/app/src/main/java/com/example/edgedetector/: CameraManager.kt  EdgeDetector.kt  GLRenderer.kt  MainActivity.kt
android/app/src/main/java/com/example/edgedetector/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/edgedetector/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
web/: package.json  tsconfig.json
web/src/: index.ts  styles.css
